@@ -1,5 +1,5 @@
 #! /bin/sh
-# Copyright (C) 2004  Free Software Foundation, Inc.
+# Copyright (C) 2004, 2008  Free Software Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -33,5 +33,8 @@ $ACLOCAL
 $AUTOCONF
 $AUTOMAKE
 ./configure
+
+grep 'am__tar.*false' Makefile && exit 77
+
 $MAKE distcheck
 test -f tar-1.0.tar.gz
